pseudocoded more of the javascript file and added instructions within h3 tags to the html

--- a/index.html
+++ b/index.html
@@ -16,11 +16,16 @@
 
   <div class="row">
     <!--This row will display the header "Crystal Collector!-->
+    <h1>Crystal Collector!</h1>
 
   </div>
 
   <div class="row">
     <!--This row will display the game instructions-->
+    <h3>Each crystal is assigned a secret value at the beginning of each round! Click on that crystal as many times as you would like in order to recieve points equal to the crystal's value!</h3>
+    <h3>The goal is to acquire the same number of points for the round as the target score for the round displayed below!</h3>
+    <h3>Be careful, though! If you go over the target round score, you will lose the round!</h3>
+    <h3>After you win or lose a round, a new round will start and a new target score will be displayed! The values of the crystals will change, too! Try to get 5 wins!</h3>
 
   </div>
 
