--- a/index.html
+++ b/index.html
@@ -31,6 +31,21 @@
 
   <div class="row">
     <!--This row will display two columns. The first column will display the Randomly generated number representing the target score for the round. The second column will display wins and losses-->
+    <div class="col-4">
+    <!--This column will display the target score for the round-->
+    </div>
+    <div class="col-8">
+      <!--This column will display the wins and losses of the user, broken up into two rows-->
+      <div class="row">
+        <!--This specific row will display the total wins of the user-->
+
+      </div>
+      <div class="row">
+        <!--This specific row will display the total losses of the user-->
+        
+      </div>
+
+    </div>
 
   </div>
 
