made some text color and background color changes in both the index.html and style.css files. Pasted the meyerweb reset code into the reset.css file

--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="./assets/css/style.css">
 <title>Crystal Collector!</title>
 </head>
 
 <body>
 
-<div class="mainContent">
+<div class="container">
 
-  <div class="row">
+  <div class="row bg-info">
     <!--This row will display the header "Crystal Collector!-->
     <h1>Crystal Collector!</h1>
 
@@ -22,10 +22,10 @@
 
   <div class="row">
     <!--This row will display the game instructions-->
-    <h3>Each crystal is assigned a secret value at the beginning of each round! Click on that crystal as many times as you would like in order to recieve points equal to the crystal's value!</h3>
-    <h3>The goal is to acquire the same number of points for the round as the target score for the round displayed below!</h3>
-    <h3>Be careful, though! If you go over the target round score, you will lose the round!</h3>
-    <h3>After you win or lose a round, a new round will start and a new target score will be displayed! The values of the crystals will change, too! Try to get 5 wins!</h3>
+    <h5>Each crystal is assigned a secret value at the beginning of each round! Click on that crystal as many times as you would like in order to recieve points equal to the crystal's value!</h5>
+    <h5>The goal is to acquire the same number of points for the round as the target score for the round displayed below!</h5>
+    <h5>Be careful, though! If you go over the target round score, you will lose the round!</h5>
+    <h5>After you win or lose a round, a new round will start and a new target score will be displayed! The values of the crystals will change, too! Try to get 5 wins!</h5>
 
   </div>
 
