declared variables for js and pseudocoded more of the js accordingly

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 <div class="container">
 
-  <div class="row bg-info">
+  <div class="row bg-info" id="CrystalHeader">
     <!--This row will display the header "Crystal Collector!-->
-    <h1>Crystal Collector!</h1>
+    <h1 class="mx-auto">Crystal Collector!</h1>
 
   </div>
 
@@ -25,7 +25,7 @@
     <h5>Each crystal is assigned a secret value at the beginning of each round! Click on that crystal as many times as you would like in order to recieve points equal to the crystal's value!</h5>
     <h5>The goal is to acquire the same number of points for the round as the target score for the round displayed below!</h5>
     <h5>Be careful, though! If you go over the target round score, you will lose the round!</h5>
-    <h5>After you win or lose a round, a new round will start and a new target score will be displayed! The values of the crystals will change, too! Try to get 5 wins!</h5>
+    <h5>After you win or lose a round, a new round will start and a new target score will be displayed! The values of the crystals will change, too! BONUS: Try to get 5 wins!</h5>
 
   </div>
 
