--- a/index.html
+++ b/index.html
@@ -33,15 +33,20 @@
     <!--This row will display two columns. The first column will display the Randomly generated number representing the target score for the round. The second column will display wins and losses-->
     <div class="col-4">
     <!--This column will display the target score for the round-->
+      <div id="target-score"></div>
+
     </div>
+
     <div class="col-8">
       <!--This column will display the wins and losses of the user, broken up into two rows-->
       <div class="row">
         <!--This specific row will display the total wins of the user-->
+        <div id="userWins"></div>
 
       </div>
       <div class="row">
         <!--This specific row will display the total losses of the user-->
+        <div id="userLosses"></div>
         
       </div>
 
@@ -51,24 +56,24 @@
 
   <div class="row">
     <!--This row will display the crystal buttons/images-->
+    <div class="crystalimg container"><img src="assets/images/Crystal1img.png" alt="Crystal1 image" class="img-fluid"></div>
+    <div class="crystalimg container"><img src="HEYJORDANPUTTHESECONDIMAGESLINKHERE"></div>
+    <div class="crystalimg container"><img src="HEYJORDANPUTTHETHIRDIMAGESLINKHERE"></div>
+    <div class="crystalimg container"><img src="HEYJORDANPUTTHEFOURTHIMAGESLINKHERE"></div>
 
   </div>
 
   <div class="row">
     <!--This row will display the text "Your total score is: "-->
+    <div id="scoreDisplay"></div>
 
   </div>
 
   <div class="row">
     <!--This row will display the user's total score so far for the round-->
+    <div id="totalScore"></div>
 
   </div>
-
-
-
-
-
-
 
 
 </div>
