added crystal image 2

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <div class="row">
     <!--This row will display the crystal buttons/images-->
     <div class="crystalimg container"><img src="assets/images/Crystal1img.png" alt="Crystal1 image" class="img-fluid"></div>
-    <div class="crystalimg container"><img src="HEYJORDANPUTTHESECONDIMAGESLINKHERE"></div>
+    <div class="crystalimg container"><img src="assets/images/Crystal2img.png" alt="Crystal2 image" class="img-fluid"></div>
     <div class="crystalimg container"><img src="HEYJORDANPUTTHETHIRDIMAGESLINKHERE"></div>
     <div class="crystalimg container"><img src="HEYJORDANPUTTHEFOURTHIMAGESLINKHERE"></div>
 
