--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!--This row will display the crystal buttons/images-->
     <div class="crystalimg container"><img src="assets/images/Crystal1img.png" alt="Crystal1 image" class="img-fluid"></div>
     <div class="crystalimg container"><img src="assets/images/Crystal2img.png" alt="Crystal2 image" class="img-fluid"></div>
-    <div class="crystalimg container"><img src="HEYJORDANPUTTHETHIRDIMAGESLINKHERE"></div>
+    <div class="crystalimg container"><img src="assets/images/Crystal3img.png" alt="Crystal3 image" class="img-fluid"></div>
     <div class="crystalimg container"><img src="HEYJORDANPUTTHEFOURTHIMAGESLINKHERE"></div>
 
   </div>
