added the fourth crystal image to the file

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="crystalimg container"><img src="assets/images/Crystal1img.png" alt="Crystal1 image" class="img-fluid"></div>
     <div class="crystalimg container"><img src="assets/images/Crystal2img.png" alt="Crystal2 image" class="img-fluid"></div>
     <div class="crystalimg container"><img src="assets/images/Crystal3img.png" alt="Crystal3 image" class="img-fluid"></div>
-    <div class="crystalimg container"><img src="HEYJORDANPUTTHEFOURTHIMAGESLINKHERE"></div>
+    <div class="crystalimg container"><img src="assets/images/Crystal4img.png" alt="Crystal4 image" class="img-fluid"></div>
 
   </div>
 
