updated js logic

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 
   <div class="row">
     <!--This row will display the crystal buttons/images-->
-    <div class="crystalimg container"><img src="assets/images/Crystal1img.png" alt="Crystal1 image" class="img-fluid"></div>
-    <div class="crystalimg container"><img src="assets/images/Crystal2img.png" alt="Crystal2 image" class="img-fluid"></div>
-    <div class="crystalimg container"><img src="assets/images/Crystal3img.png" alt="Crystal3 image" class="img-fluid"></div>
-    <div class="crystalimg container"><img src="assets/images/Crystal4img.png" alt="Crystal4 image" class="img-fluid"></div>
+    <div class="crystalimg container" id="Crystal1"><img src="assets/images/Crystal1img.png" alt="Crystal1 image" class="img-fluid"></div>
+    <div class="crystalimg container" id="Crystal2"><img src="assets/images/Crystal2img.png" alt="Crystal2 image" class="img-fluid"></div>
+    <div class="crystalimg container" id="Crystal3"><img src="assets/images/Crystal3img.png" alt="Crystal3 image" class="img-fluid"></div>
+    <div class="crystalimg container" id="Crystal4"><img src="assets/images/Crystal4img.png" alt="Crystal4 image" class="img-fluid"></div>
 
   </div>
 
