edited index.html to display wins and losses

--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
       <!--This column will display the wins and losses of the user, broken up into two rows-->
       <div class="row">
         <!--This specific row will display the total wins of the user-->
-        <div id="userWins"></div>
+        <div id="userWins">Wins: 0</div>
 
       </div>
       <div class="row">
         <!--This specific row will display the total losses of the user-->
-        <div id="userLosses"></div>
+        <div id="userLosses">Losses: 0</div>
         
       </div>
 
